# token-efficiency-engine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: tests.yml
claude_toolkit/: __init__.py  models.py
claude_toolkit/api_server/: server.py
claude_toolkit/budget/: budget.py
claude_toolkit/cache_detector/: detector.py
claude_toolkit/cli_interface/: cli.py
claude_toolkit/context_extractor/: extractor.py
claude_toolkit/cost_estimator/: __init__.py  estimator.py
claude_toolkit/example_pruner/: pruner.py
claude_toolkit/heatmap/: __init__.py  heatmap.py
claude_toolkit/monitor/: tracker.py
claude_toolkit/prompt_optimizer/: __init__.py  optimizer.py
claude_toolkit/rag_advisor/: advisor.py
claude_toolkit/session_analyzer/: __init__.py  analyzer.py
claude_toolkit/tokenizer/: __init__.py  counter.py
examples/logs/: claude_session.json
examples/prompts/: focused_prompt.txt  verbose_prompt.txt
tests/: test_api_server.py  test_budget.py  test_cache_detector.py  test_context_extractor.py  test_cost_estimator.py  test_example_pruner.py  test_heatmap.py  test_optimizer.py  test_rag_advisor.py  test_session_analyzer.py  test_tokenizer.py
